# trashday

./: .gitignore  Cargo.toml
migrations/2021-11-21-120748_trash_days/: down.sql  up.sql
sql/: insert.sql
src/: main.rs  models.rs  schema.rs
