[package]
name = "trashday"
version = "0.1.0"
authors = ["kfyuta <example@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
rocket="0.4.10"
rocket_contrib={version="0.4", features=["json"]}
serde = {version="1.0", features=["derive"]}
serde_json="1.0.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.10"